--- a/index.html
+++ b/index.html
@@ -1,81 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerson Jemenez - IT Professional</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jerson Jemenez - Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Sidebar -->
-    <aside id="sidebar">
-        <button id="sidebar-toggle">?</button>
-        <nav>
-            <ul>
-                <li><a href="#summary">Summary</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#certificates">Certificates</a></li>
-            </ul>
-        </nav>
-    </aside>
+  <!-- Navigation Menu -->
+  <nav>
+    <div class="container">
+      <h1 class="logo">Jerson Jemenez</h1>
+      <ul class="nav-links">
+        <li><a href="#summary">Summary</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#certificates">Certificates</a></li>
+      </ul>
+      <button id="dark-mode-toggle">Toggle Dark Mode</button>
+    </div>
+  </nav>
 
-    <!-- Main Content -->
-    <main>
-        <header>
-            <div class="container">
-                <h1>Jerson Jemenez</h1>
-                <p>jemenezjerson@gmail.com | 09484577044 | Naga City</p>
-                <button id="theme-toggle">Toggle Dark Mode</button>
-            </div>
-        </header>
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="container">
+      <h2>Welcome to My Portfolio</h2>
+      <p>IT Professional | Technical Support | Live Streaming Expert</p>
+      <a href="#summary" class="btn">Learn More</a>
+    </div>
+  </header>
 
-        <section id="summary" class="container">
-            <h2>Summary</h2>
-            <p>Detail-oriented IT Professional with 2+ years of hands-on experience in technical support, network diagnostics, and live streaming operations. Adept at resolving complex technical issues, optimizing system performance, and delivering high-quality IT solutions. Proven expertise in CCTV installation, network upgrades, and live event streaming. Committed to continuous learning and leveraging cutting-edge technology to drive organizational efficiency.</p>
-        </section>
+  <!-- Summary Section -->
+  <section id="summary" class="section">
+    <div class="container">
+      <h2>Summary</h2>
+      <p>
+        Detail-oriented IT Professional with 2+ years of hands-on experience in technical support, network diagnostics, and live streaming operations. Adept at resolving complex technical issues, optimizing system performance, and delivering high-quality IT solutions. Proven expertise in CCTV installation, network upgrades, and live event streaming. Committed to continuous learning and leveraging cutting-edge technology to drive organizational efficiency.
+      </p>
+    </div>
+  </section>
 
-        <section id="experience" class="container">
-            <h2>Experience</h2>
-            <div class="experience-item">
-                <h3>IT / Technical Staff</h3>
-                <p><strong>Provincial Government of Camarines Sur</strong> • Pili, Camarines Sur</p>
-                <p><em>01/2022 - Present</em></p>
-                <ul>
-                    <li>Technical Support & Network Management: IT support, resolving hardware/software issues and reducing downtime through proactive diagnostics. Network upgrades, including Starlink and Converge Fiber Internet installations, enhancing connectivity for government offices.</li>
-                    <li>CCTV Systems & Security: Designed and installed CCTV systems across Camarines Sur Hospital and School, improving surveillance coverage through strategic site surveys and optimal camera placement. Performing routine maintenance and troubleshooting on cameras, cabling, and monitoring tools.</li>
-                    <li>Live Streaming & Event Coordination: Managed live streaming for public events using OBS, ensuring seamless 1080p transmission to audiences. Collaborated with event organizers to set up multicam production setups, resolving technical issues in real-time to maintain broadcast quality.</li>
-                </ul>
-            </div>
-        </section>
+  <!-- Experience Section -->
+  <section id="experience" class="section">
+    <div class="container">
+      <h2>Experience</h2>
+      <div class="experience-item">
+        <h3>IT / Technical Staff</h3>
+        <p><strong>Provincial Government of Camarines Sur</strong> | Pili, Camarines Sur</p>
+        <p><em>01/2022 - Present</em></p>
+        <ul>
+          <li>Technical Support & Network Management: IT support, resolving hardware/software issues and reducing downtime through proactive diagnostics. Network upgrades, including Starlink and Converge Fiber Internet installations, enhancing connectivity for government offices.</li>
+          <li>CCTV Systems & Security: Designed and installed CCTV systems across Camarines Sur Hospital and School, improving surveillance coverage through strategic site surveys and optimal camera placement. Performing routine maintenance and troubleshooting on cameras, cabling, and monitoring tools.</li>
+          <li>Live Streaming & Event Coordination: Managed live streaming for public events using OBS, ensuring seamless 1080p transmission to audiences. Collaborated with event organizers to set up multicam production setups, resolving technical issues in real-time to maintain broadcast quality.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-        <section id="skills" class="container">
-            <h2>Skills</h2>
-            <ul>
-                <li>Network Configuration and Management</li>
-                <li>Software Support (e.g., Microsoft Office)</li>
-                <li>Live Streaming Setup and Operation</li>
-                <li>Audio and Video Equipment Management</li>
-                <li>Broadcast Software Proficiency (OBS, Streamlabs, vMix)</li>
-                <li>Multicam Production</li>
-                <li>Technical Aptitude</li>
-            </ul>
-        </section>
+  <!-- Skills Section -->
+  <section id="skills" class="section">
+    <div class="container">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>Network Configuration and Management</li>
+        <li>Software Support (e.g., Microsoft Office)</li>
+        <li>Live Streaming Setup and Operation</li>
+        <li>Audio and Video Equipment Management</li>
+        <li>Broadcast Software Proficiency (OBS, Streamlabs, vMix)</li>
+        <li>Multicam Production</li>
+        <li>Technical Aptitude</li>
+      </ul>
+    </div>
+  </section>
 
-        <section id="education" class="container">
-            <h2>Education</h2>
-            <p><strong>Bachelor Degree in Computer Science</strong></p>
-            <p>Tanauan Institute • Batangas City, Tanauan City</p>
-            <p><em>03/2014</em></p>
-        </section>
+  <!-- Education Section -->
+  <section id="education" class="section">
+    <div class="container">
+      <h2>Education</h2>
+      <p><strong>Bachelor Degree in Computer Science</strong></p>
+      <p>Tanauan Institute | Batangas City, Tanauan City</p>
+      <p><em>03/2014</em></p>
+    </div>
+  </section>
 
-        <section id="certificates" class="container">
-            <h2>Certificates</h2>
-            <p>Computer Hardware Servicing NC 2 passer</p>
-        </section>
-    </main>
+  <!-- Certificates Section -->
+  <section id="certificates" class="section">
+    <div class="container">
+      <h2>Certificates</h2>
+      <p>Computer Hardware Servicing NC 2 passer</p>
+    </div>
+  </section>
 
-    <script src="script.js"></script>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>Contact: jemenezjerson@gmail.com | 09484577044 | Naga City</p>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
