--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <nav>
     <div class="container">
       <h1 class="logo">Jerson Jemenez</h1>
-      <ul class="nav-links">
+      <button id="menu-toggle">&#9776;</button> <!-- Hamburger Icon -->
+      <ul class="nav-links" id="nav-links">
         <li><a href="#summary">Summary</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#skills">Skills</a></li>
