--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jerson Jemenez - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <link rel="icon" type="image/png" href="assets/icons/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
@@ -55,12 +55,12 @@
         <h2>My Work</h2>
         <div class="projects">
             <div class="project">
-                <img src="assets/images/project1.jpg" alt="CCTV Installation">
+                <img src="background.jpg" alt="CCTV Installation">
                 <h3>CCTV Installation</h3>
                 <p>Implemented security surveillance systems across hospitals and schools.</p>
             </div>
             <div class="project">
-                <img src="assets/images/project2.jpg" alt="Live Streaming Setup">
+                <img src="background.jpg" alt="Live Streaming Setup">
                 <h3>Live Streaming</h3>
                 <p>Managed 1080p live streams for government events using OBS.</p>
             </div>
