--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jerson Jemenez - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
 
